// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
Object {
  "name": "Publish publish",
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "uses": "actions/checkout@v4",
    },
    Object {
      "uses": "docker/setup-qemu-action@v3",
    },
    Object {
      "uses": "docker/setup-buildx-action@v3",
    },
    Object {
      "name": "Cache Docker layers",
      "uses": "actions/cache@v4",
      "with": Object {
        "key": "buildx-publish-publish",
        "path": "/tmp/.buildx-cache",
      },
    },
    Object {
      "uses": "docker/login-action@v3",
      "with": Object {
        "password": "\${{ secrets.DOCKER_PASSWORD }}",
        "username": "\${{ secrets.DOCKER_USERNAME }}",
      },
    },
    Object {
      "name": "Build/Publish",
      "uses": "docker/build-push-action@v6",
      "with": Object {
        "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
        "cache-to": "type=local,dest=/tmp/.buildx-cache",
        "context": ".",
        "file": "./Dockerfile",
        "push": "\${{ github.ref == 'refs/heads/master' }}",
        "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
      },
    },
  ],
}
`;

exports[`disable cache 1`] = `
Object {
  "name": "Publish publish",
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "uses": "actions/checkout@v4",
    },
    Object {
      "uses": "docker/setup-qemu-action@v3",
    },
    Object {
      "uses": "docker/setup-buildx-action@v3",
    },
    Object {
      "name": "Cache Docker layers",
      "uses": "actions/cache@v4",
      "with": Object {
        "key": "buildx-publish-publish",
        "path": "/tmp/.buildx-cache",
      },
    },
    Object {
      "uses": "docker/login-action@v3",
      "with": Object {
        "password": "\${{ secrets.DOCKER_PASSWORD }}",
        "username": "\${{ secrets.DOCKER_USERNAME }}",
      },
    },
    Object {
      "name": "Build/Publish",
      "uses": "docker/build-push-action@v6",
      "with": Object {
        "cache-from": "type=local,src=/tmp/.buildx-cache",
        "cache-to": "type=local,dest=/tmp/.buildx-cache",
        "context": ".",
        "file": "./Dockerfile",
        "push": "\${{ github.ref == 'refs/heads/master' }}",
        "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
      },
    },
  ],
}
`;

exports[`no publish 1`] = `
Object {
  "name": "Build publish",
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "uses": "actions/checkout@v4",
    },
    Object {
      "uses": "docker/setup-qemu-action@v3",
    },
    Object {
      "uses": "docker/setup-buildx-action@v3",
    },
    Object {
      "name": "Cache Docker layers",
      "uses": "actions/cache@v4",
      "with": Object {
        "key": "buildx-build-publish",
        "path": "/tmp/.buildx-cache",
      },
    },
    Object {
      "name": "Build/Publish",
      "uses": "docker/build-push-action@v6",
      "with": Object {
        "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
        "cache-to": "type=local,dest=/tmp/.buildx-cache",
        "context": ".",
        "file": "./Dockerfile",
        "outputs": "type=docker,dest=/tmp/image.tar",
        "push": false,
        "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
      },
    },
    Object {
      "uses": "actions/upload-artifact@v2",
      "with": Object {
        "name": "build-publish",
        "path": "/tmp/image.tar",
      },
    },
  ],
}
`;

exports[`with build args 1`] = `
Object {
  "name": "Publish publish",
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "uses": "actions/checkout@v4",
    },
    Object {
      "uses": "docker/setup-qemu-action@v3",
    },
    Object {
      "uses": "docker/setup-buildx-action@v3",
    },
    Object {
      "name": "Cache Docker layers",
      "uses": "actions/cache@v4",
      "with": Object {
        "key": "buildx-publish-publish",
        "path": "/tmp/.buildx-cache",
      },
    },
    Object {
      "uses": "docker/login-action@v3",
      "with": Object {
        "password": "\${{ secrets.DOCKER_PASSWORD }}",
        "username": "\${{ secrets.DOCKER_USERNAME }}",
      },
    },
    Object {
      "name": "Build/Publish",
      "uses": "docker/build-push-action@v6",
      "with": Object {
        "build-args": "FOO=bar,BAR=baz",
        "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
        "cache-to": "type=local,dest=/tmp/.buildx-cache",
        "context": ".",
        "file": "./Dockerfile",
        "push": "\${{ github.ref == 'refs/heads/master' }}",
        "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
      },
    },
  ],
}
`;

exports[`with overrides 1`] = `
Object {
  "continue-on-error": true,
  "name": "Publish publish",
  "runs-on": "ubuntu-latest",
  "steps": Array [
    Object {
      "uses": "actions/checkout@v4",
    },
    Object {
      "uses": "docker/setup-qemu-action@v3",
    },
    Object {
      "uses": "docker/setup-buildx-action@v3",
    },
    Object {
      "name": "Cache Docker layers",
      "uses": "actions/cache@v4",
      "with": Object {
        "key": "buildx-publish-publish",
        "path": "/tmp/.buildx-cache",
      },
    },
    Object {
      "uses": "docker/login-action@v3",
      "with": Object {
        "password": "\${{ secrets.DOCKER_PASSWORD }}",
        "username": "\${{ secrets.DOCKER_USERNAME }}",
      },
    },
    Object {
      "name": "Build/Publish",
      "uses": "docker/build-push-action@v6",
      "with": Object {
        "cache-from": "type=local,src=/tmp/.buildx-cache,type=registry,ref=pennlabs/example:latest",
        "cache-to": "type=local,dest=/tmp/.buildx-cache",
        "context": ".",
        "file": "./Dockerfile",
        "push": "\${{ github.ref == 'refs/heads/master' }}",
        "tags": "pennlabs/example:latest,pennlabs/example:\${{ github.sha }}",
      },
    },
  ],
}
`;
